--- a/第一章.md
+++ b/第一章.md
@@ -1,6 +1,7 @@
 1.程序就是一组计算机能够识别和执行的指令
 
-2.出于人机交互的需要
+2.出于人机交互的需要  
+
 
 3.
 （1）  
@@ -15,16 +16,69 @@
 
 （3）  
 程序：一组计算机能够识别和执行的指令  
-程序模块：  
-程序文件：  
+程序模块：由汇编程序、编译程序、装入程序或翻译程序作为一个整体来处理的一级独立的、可识别的程序指令  
+程序文件：描述程序的文件  
 
 （4）  
-函数：  
-主函数：  
-被调用函数：  
-库函数：  
+函数：一段可以直接被另一段程序引用的程序  
+主函数：程序执行的起点  
+被调用函数：被另一个调用的函数  
+库函数：一般指编译器提供用于调用的函数  
 
 （5）
-程序调试：  
-程序测试：  
+程序调试：用手工或者编译程序等方法进行测试，修正错误的过程   
+程序测试：对一个完成了全部或者部分的计算机程序在使用前的检测，确保该程序以预定的方式正确的运行  
 
+4.
+
+    #include<stdio.h>
+
+    int main()
+    {
+        printf("Hello World!");
+        return 0;
+    }  
+
+
+5.
+
+    #include<stdio.h>
+
+    int main()
+    {
+        printf("*****\n\t*****\n\t\t*****\n\t\t\t*****");
+        return 0;
+    }
+
+
+6.   
+
+    #include<stdio.h>
+
+    int main()
+    {
+        int a, b, c,k,j;
+        scanf("%d %d %d",&a, &b, &c);
+        k = max(a, b);
+        j = max(k, c);
+        printf("The max number is %d", j);
+    }
+
+    int max(int x, int y)
+    {
+        int z;
+        if (x>y)
+        {
+            z = x;
+        }
+        else
+        {
+            z = y;
+        }
+        return z;
+    }
+
+此处如果是高版本的vs会报错提示scanf不安全，但是对于新手是摸不着头脑，增加学习成本的  
+
+解决方案如下
+https://blog.csdn.net/Hanani_Jia/article/details/78516345
