--- a/第一章.md
+++ b/第一章.md
@@ -1,9 +1,9 @@
-1.程序就是一组计算机能够识别和执行的指令
+####**1.** 程序就是一组计算机能够识别和执行的指令
 
-2.出于人机交互的需要  
+####**2.** 出于人机交互的需要  
 
 
-3.
+###**3.** 
 （1）  
 源程序：高级语言写的程序
 目标程序：转换为机器指令的程序  
@@ -29,7 +29,7 @@
 程序调试：用手工或者编译程序等方法进行测试，修正错误的过程   
 程序测试：对一个完成了全部或者部分的计算机程序在使用前的检测，确保该程序以预定的方式正确的运行  
 
-4.
+###**4.** 
 
     #include<stdio.h>
 
@@ -40,7 +40,7 @@
     }  
 
 
-5.
+###5.
 
     #include<stdio.h>
 
@@ -51,7 +51,7 @@
     }
 
 
-6.   
+###6.
 
     #include<stdio.h>
 
@@ -78,7 +78,7 @@
         return z;
     }
 
-此处如果是高版本的vs会报错提示scanf不安全，但是对于新手是摸不着头脑，增加学习成本的  
+####此处如果使用的是的vs2015以上版本，会报错提示scanf不安全，但是对于新手是摸不着头脑，增加学习成本的  
 
 解决方案如下
 https://blog.csdn.net/Hanani_Jia/article/details/78516345
