--- a/第二章.md
+++ b/第二章.md
@@ -5,3 +5,28 @@
 
 ###2.
 
+结构化算法是由一些基本结构顺序组成的。  
+
+好处：将复杂问题简单化，让编程更容易，提高代码维护和可读性。
+
+###3. 
+特点：
+（1）只有一个入口
+（2）只有一个出口
+（3）结构内的每一部分都有机会被执行到
+（4）结构内不存在死循环
+
+###4.
+(1)
+~~~dot
+digraph G{
+    node [shape="record"];
+    A->B;
+    C->A;
+    B->C;
+    
+
+}
+~~~
+
+(2)
