--- a/第二章.md
+++ b/第二章.md
@@ -1,32 +1,29 @@
-### 1.  
+
+# 第二章习题答案
+
+### 1
+
 （1）出门去上学，算法：先坐地铁，再转公交，最后步行到达学校
 （2）番茄炒蛋，算法：先切好番茄，再打蛋并搅拌均匀，最后入锅翻炒
 （3）化妆，算法：先洗脸，再抹粉底，最后打上腮红
 
-### 2.
+### 2
 
 结构化算法是由一些基本结构顺序组成的。  
 
 好处：将复杂问题简单化，让编程更容易，提高代码维护和可读性。
 
-### 3. 
+### 3
+
 特点：
 （1）只有一个入口
 （2）只有一个出口
 （3）结构内的每一部分都有机会被执行到
 （4）结构内不存在死循环
 
-### 4.
-(1)
-~~~dot
-digraph G{
-    node [shape="record"];
-    A->B;
-    C->A;
-    B->C;
-    
+### 4
 
-}
-~~~
+(1)
+
 
 (2)
