--- a/第二章.md
+++ b/第二章.md
@@ -1,7 +1,7 @@
 
 # 第二章习题答案
 
-### 1
+## 1
 
 （1）出门去上学，算法：先坐地铁，再转公交，最后步行到达学校
 （2）番茄炒蛋，算法：先切好番茄，再打蛋并搅拌均匀，最后入锅翻炒
@@ -23,7 +23,9 @@
 
 ### 4
 
+此处图片如果无法加载，请参考解决方案如下
+<https://www.jianshu.com/p/3eacebfc55ab>
+
 (1)
-
-
+![4.1](https://github.com/WangSong2017/Answer-for-C-Program-Designing-Fifth-Edition-/blob/master/image/4.1.png)
 (2)
