--- a/第一章.md
+++ b/第一章.md
@@ -1,5 +1,7 @@
 # 第一章
 
+[toc]
+
 ## 1
 
 程序就是一组计算机能够识别和执行的指令
@@ -83,7 +85,7 @@
         return z;
     }
 
-## 此处如果使用的是的vs2015以上版本，会报错提示scanf不安全，但是对于新手是摸不着头脑，增加学习成本的
+**此处如果使用的是的vs2015以上版本，会报错提示scanf不安全，但是对于新手是摸不着头脑，增加学习成本的**
 
 解决方案如下:  
 
