--- a/第一章.md
+++ b/第一章.md
@@ -83,7 +83,7 @@
         return z;
     }
 
-**此处如果使用的是的vs2015以上版本，会报错提示scanf不安全，但是对于新手是摸不着头脑，增加学习成本的**
+## 此处如果使用的是的vs2015以上版本，会报错提示scanf不安全，但是对于新手是摸不着头脑，增加学习成本的
 
 解决方案如下:  
 
