--- a/第二章.md
+++ b/第二章.md
@@ -24,8 +24,23 @@
 ### 4
 
 此处图片如果无法加载，请参考解决方案如下  
-<https://www.jianshu.com/p/3eacebfc55ab>
+<https://www.jianshu.com/p/3eacebfc55ab>  
+
+或者尝试更换阿里dns
 
 (1)
 ![4.1](https://github.com/WangSong2017/Answer-for-C-Program-Designing-Fifth-Edition-/blob/master/image/4.1.png)  
 (2)
+![4.2](https://github.com/WangSong2017/Answer-for-C-Program-Designing-Fifth-Edition-/blob/master/image/4.2.png)  
+(3)  
+![4.1](https://github.com/WangSong2017/Answer-for-C-Program-Designing-Fifth-Edition-/blob/master/image/4.3.png)  
+(4)
+![4.1](https://github.com/WangSong2017/Answer-for-C-Program-Designing-Fifth-Edition-/blob/master/image/4.4.png)  
+(5)
+![4.1](https://github.com/WangSong2017/Answer-for-C-Program-Designing-Fifth-Edition-/blob/master/image/4.5.png)  
+(6)
+![4.1](https://github.com/WangSong2017/Answer-for-C-Program-Designing-Fifth-Edition-/blob/master/image/4.6.png)  
+(7)
+![4.1](https://github.com/WangSong2017/Answer-for-C-Program-Designing-Fifth-Edition-/blob/master/image/4.7.png)  
+(8)
+![4.1](https://github.com/WangSong2017/Answer-for-C-Program-Designing-Fifth-Edition-/blob/master/image/4.8.png)  
