--- a/第二章.md
+++ b/第二章.md
@@ -48,3 +48,47 @@
 ### 5
 
 ![5](https://github.com/WangSong2017/Answer-for-C-Program-Designing-Fifth-Edition-/blob/master/image/5.png)  
+
+### 6
+  
+* 1
+
+~~~C
+c=a
+a=b
+b=c
+~~~
+
+* 2
+
+~~~C
+
+n=1
+while n<10 do
+    input a
+    if a>max then max=a
+    n=n+1
+end do
+print max
+~~~
+
+* 3
+
+~~~C
+
+input a,b,c
+if a<b then swap a,b
+if a<c then
+    print c,a,b
+else
+    if c>b then
+        print a,c,b
+    else
+        print a,b,c
+    end if
+end if
+~~~
+
+~~~C
+
+~~~
