--- a/第二章.md
+++ b/第二章.md
@@ -89,6 +89,81 @@ else
 end if
 ~~~
 
-~~~C
+* 4
 
+~~~C
+sum = 0
+n=1
+while n<=100 do
+    sum=sum+1
+    n=n+1
+end do
+print sum
+~~~
+
+* 5
+
+~~~C
+input n
+flag=0
+if mod(n,3)!=0 then flag=-1
+if mod(n,5)!=0 then flag=-1
+if flag=0 then
+    print n "能被3和5整除"
+else
+    print n"不能同时被3和5整除"
+
+end if
+~~~
+
+* 6
+
+~~~C
+n =100
+while n<=200 do
+    i=2
+    while i<=√n
+        if mod(n,i)=0 then
+            i=n
+        else
+            i=i+1
+        end if
+    end do
+    if i<√n then print n
+    n=m+1
+end do
+~~~
+
+* 7
+
+~~~C
+intput m,n
+if m<n then swap m,n
+t=mod(m,n)
+while r!= do
+    m=n
+    n=r
+    r=mod(m,n)
+end do
+print n
+~~~
+
+* 8
+
+~~~C
+int a,b,c
+disc = b^2-4ac
+if disc>=0 then
+    if disc=0 then
+        x1,x2=-b/(2a)
+    else
+        x1=(-b+√disc)/(2a)
+        x2=(-b-√disc)/(2a)
+    end if
+    print x1,x2
+else
+    p=-b/(2a)
+    q=√disc /(2a)
+    print p+q,"+",p-q,"i"
+end if
 ~~~
