--- a/第三章.md
+++ b/第三章.md
@@ -22,3 +22,36 @@ int main()
 }
 
 ~~~
+
+* 2
+
+~~~C
+#include<stdio.h>
+#include<math.h>
+
+int main() {
+    float p,p1, p2, p3, p4, p5,r0,r1,r2,r3,r5;
+    p = 1000;
+    r0 = 0.0035;
+    r1 = 0.015;
+    r2 = 0.021;
+    r3 = 0.0275;
+    r5 = 0.03;
+
+    p1 = p * (1 + 5 * r5);
+    p2 = p * (1 + 2 * r2) * (1 + 3 * r3);
+    p3 = p * (1 + 3 * r3) * (1 + 2 * r2);
+    p4 = p * pow(1 + r1, 5);
+    p5 = p * pow((1 + r0 / 4), 4 * 5);
+
+    printf("%f\n%f\n%f\n%f\n%f\n", p1, p2, p3, p4, p5);
+
+    return 0;
+}
+~~~
+
+* 3
+
+~~~C
+
+~~~
