--- a/第三章.md
+++ b/第三章.md
@@ -53,5 +53,86 @@ int main() {
 * 3
 
 ~~~C
+#include <stdio.h>
+#include <math.h>
+
+int main()
+{
+    float d = 300000, p = 6000, r = 0.01, m;
+    m = log10(p / (p - d * r)) / log10(1 + r);
+    printf("m=%f", m);
+    return 0;
+}
+~~~
+
+* 4
+
+~~~C
+c1=a,c2=b
+c1=97,c2=98
+~~~
+
+（1）
+第一行按照%c格式由字母对应ASCII码数字输出字母
+第二行依旧输出数字
+（2）
+字符型数据是作为signed char，存字符的有效范围是0~127，超过范围，不同系统处理方式不同，结果不可预料
+
+使用%d输出为，c1=-59，c2=-58，此为按补码形式输出
+（3）
+c1=197,c2=198
+%d格式输出
+c1=197,c2=198，因为在int类型的有效范围内
+%c输出
+不可预料字符
+
+* 5
+
+~~~C
+3 7
+8.5 71.82Aa
+~~~
+
+* 6
+
+~~~C
+#include <stdio.h>
+int main()
+{
+    char c1 = 'C', c2 = 'h', c3 = 'i', c4 = 'n', c5 = 'a';
+    c1 = c1 + 4;
+    c2 = c2 + 4;
+    c3 = c3 + 4;
+    c4 = c4 + 4;
+    c5 = c5 + 4;
+    printf("%c%c%c%c%c", c1, c2, c3, c4, c5);
+}
+~~~
+
+* 7
+
+~~~C
+#include <stdio.h>
+int main()
+{
+    float h, r, l, s, sq, vq, vz;
+    float pi = 3.1415926;
+    printf("输入半径r和高h:");
+    scanf("%f %f",&r,&h);
+    l=2*pi*r;
+    s=r*r*pi;
+    sq=4*pi*r*r;
+    vq=3.0/4.0*pi*r*r*r;
+    vz=pi*r*r*h;
+    printf("圆周长=%6.2f\n",l);
+    printf("圆面积=%6.2f\n",s);
+    printf("圆球表面积=%6.2f\n",sq);
+    printf("圆球体积=%6.2f\n",vq);
+    printf("圆柱体积=%6.2f\n",vz);
+    return 0;
+}
+~~~
+
+~~~C
 
 ~~~
