--- a/第三章.md
+++ b/第三章.md
@@ -133,6 +133,28 @@ int main()
 }
 ~~~
 
-~~~C
+* 8
 
+~~~C
+#include <stdio.h>
+int main()
+{
+    char c1, c2;
+    c1 = getchar();
+    c2 = getchar();
+    printf("开始输出c1c2\n");
+    putchar(c1);
+    putchar(c2);
+    printf("C1=%c C2=%c",c1,c2);
+    printf("C1=%d C2=%d",c1,c2);
+    return 0;
+}
 ~~~
+
+(1)
+c1和c2可以定义成字符型或整型
+(2)
+可使用printf函数输出ASCII码
+printf("C1=%d C2=%d",c1,c2);
+(3)
+整型变量在可输出字符的范围内（ASCCI码为0-127的字符）是可以和字符数据互相转换的，此范围外则不行。
