--- a/第一章.md
+++ b/第一章.md
@@ -1,14 +1,14 @@
 # 第一章
 
-## 1
+* 1
 
 程序就是一组计算机能够识别和执行的指令
 
-## 2
+* 2
 
 出于人机交互的需要  
 
-## 3
+* 3
 
 （1）  
 源程序：高级语言写的程序
@@ -36,54 +36,68 @@
 
 程序测试：对一个完成了全部或者部分的计算机程序在使用前的检测，确保该程序以预定的方式正确的运行  
 
-## 4
+* 4
 
-    #include<stdio.h>
+~~~C
+#include<stdio.h>
 
-    int main()
+int main()
+{
+    printf("Hello World!");
+    return 0;
+}  
+~~~
+
+* 5
+
+~~~C
+/*输出
+*****
+        *****
+                *****
+                        *****
+*/
+
+#include<stdio.h>
+
+int main()
+{
+    printf("*****\n\t*****\n\t\t*****\n\t\t\t*****");
+    return 0;
+}
+~~~
+
+* 6
+
+~~~C
+//输出最大值
+#include<stdio.h>
+
+int main()
+{
+    int a, b, c,k,j;
+    scanf("%d %d %d",&a, &b, &c);
+    k = max(a, b);
+    j = max(k, c);
+    printf("The max number is %d", j);
+}
+
+int max(int x, int y)
+{
+    int z;
+    if (x>y)
     {
-        printf("Hello World!");
-        return 0;
-    }  
-
-## 5
-
-    #include<stdio.h>
-
-    int main()
-    {
-        printf("*****\n\t*****\n\t\t*****\n\t\t\t*****");
-        return 0;
+        z = x;
     }
-
-## 6
-
-    #include<stdio.h>
-
-    int main()
+    else
     {
-        int a, b, c,k,j;
-        scanf("%d %d %d",&a, &b, &c);
-        k = max(a, b);
-        j = max(k, c);
-        printf("The max number is %d", j);
+        z = y;
     }
+    return z;
+}
+~~~
 
-    int max(int x, int y)
-    {
-        int z;
-        if (x>y)
-        {
-            z = x;
-        }
-        else
-        {
-            z = y;
-        }
-        return z;
-    }
-
-## 此处如果使用的是的vs2015以上版本，会报错提示scanf不安全，但是对于新手是摸不着头脑，增加学习成本的
+* 此处如果使用的是的vs2015以上版本，会报错提示scanf不安全，但是对于新手是摸不着头脑，增加学习成本的
 
 解决方案如下:  
 
