--- a/第六章.md
+++ b/第六章.md
@@ -79,62 +79,440 @@ int main()
 }
 ~~~
 
-~~~C
+* 3
 
+~~~C
+/*求一个3*3整型矩阵对角线元素之和*/
+#include <stdio.h>
+int main()
+{
+    int a[3][3], sum = 0;
+    int i, j;
+    printf("enter data:\n");
+    for (i = 0; i < 3; i++)
+        for (j = 0; j < 3; j++)
+            scanf("%d", &a[i][j]);
+    for (i = 0; i < 3; i++)
+        sum = sum + a[i][i];
+    printf("sum=%6d", sum);
+}
 ~~~
 
-~~~C
+* 4
 
+~~~C
+#include <stdio.h>
+int main()
+{
+    int a[11] = {1, 4, 6, 9, 13, 16, 19, 28, 40, 100};
+    int temp1, temp2, number, end, i, j;
+    printf("array a:\n");
+    for (i = 0; i < 10; i++)
+        printf("%5d", a[i]);
+    printf("\n");
+    printf("insert data:");
+    scanf("%d", &number);
+    end = a[9];
+    if (number > end)
+        a[10] = number;
+    else
+    {
+        for (i = 0; i < 10; i++)
+        {
+            if (a[i] > number)
+            {
+                temp1 = a[i];
+                a[i] = number;
+                for (j = i + 1; j < 11; j++)
+                {
+                    temp2 = a[j];
+                    a[j] = temp1;
+                    temp1 = temp2;
+                }
+                break;
+            }
+        }
+    }
+    printf("Now array a:\n");
+    for (i = 0; i < 11; i++)
+        printf("%5d", a[i]);
+    printf("\n");
+    return 0;
+}
 ~~~
 
-~~~C
+* 5
 
+~~~C
+#include <stdio.h>
+#define N 5
+int main()
+{
+    int a[N], i, temp;
+    printf("enter array a:\n");
+    for (i = 0; i < N; i++)
+        scanf("%d", &a[i]);
+    printf("array a:\n");
+    for (i = 0; i < N; i++)
+        printf("%4d", a[i]);
+    for (i = 0; i < N / 2; i++)
+    {
+        temp = a[i];
+        a[i] = a[N - i - 1];
+        a[N - i - 1] = temp;
+    }
+    printf("\nNow array a:\n");
+    for (i = 0; i < N; i++)
+        printf("%4d", a[i]);
+    printf("\n");
+    return 0;
+}
 ~~~
 
-~~~C
+*6
 
+~~~C
+//输出杨辉三角形
+#include <stdio.h>
+#define N 10
+int main()
+{
+    int i, j, a[N][N];
+    for (i = 0; i < N; i++)
+    {
+        a[i][i] = 1;
+        a[i][0] = 1;
+    }
+    for (i = 2; i < N; i++)
+        for (j = 1; j <= i - 1; j++)
+            a[i][j] = a[i - 1][j - 1] + a[i - 1][j];
+    for (i = 0; i < N; i++)
+    {
+        for (j = 0; j <= i; j++)
+            printf("%6d", a[i][j]);
+        printf("\n");
+    }
+    printf("\n");
+    return 0;
+}
 ~~~
 
-~~~C
+* 7
 
+~~~C
+//输出魔方阵
+#include <stdio.h>
+int main()
+{
+    int a[15][15], i, j, k, p, n;
+    p = 1;
+    while (p == 1)
+    {
+        printf("enter n(n=1--15):");
+        scanf("%d", &n);
+        if ((n != 0) && (n <= 15) && (n % 2 != 0))
+            p = 0;
+    }
+    for (i = 1; i <= n; i++)
+        for (j = 1; j <= n; j++)
+            a[i][j] = 0;
+    j = n / 2 + 1;
+    a[1][j] = 1;
+    for (k = 2; k <= n * n; k++)
+    {
+        i = i - 1;
+        j = j + 1;
+        if ((i < 1) && (j > n))
+        {
+            i = i + 2;
+            j = j - 1;
+        }
+        else
+        {
+            if (i < 1)
+                i = n;
+            if (j > n)
+                j = 1;
+        }
+        if (a[i][j] == 0)
+            a[i][j] = k;
+        else
+        {
+            i = i + 2;
+            j = j - 1;
+            a[i][j] = k;
+        }
+    }
+    for (i = 1; i <= n; i++)
+    {
+        for (j = 1; j <= n; j++)
+            printf("%5d", a[i][j]);
+        printf("\n");
+    }
+    return 0;
+}
 ~~~
 
-~~~C
+* 8
 
+~~~C
+#include <stdio.h>
+#define N 4
+#define M 5
+int main()
+{
+    int i, j, k, a[N][M], max, maxj, flag;
+    printf("please input matrix:\n");
+    for (i = 0; i < N; i++)
+        for (j = 0; j < M; j++)
+            scanf("%d", &a[i][j]);
+    for (i = 0; i < N; i++)
+    {
+        max = a[i][0];
+        maxj = 0;
+        for (j = 0; j < M; j++)
+            if (a[i][j] > max)
+            {
+                max = a[i][j];
+                maxj = j;
+            }
+        flag = 1;
+        for (k = 0; k < N; k++)
+            if (max > a[k][maxj])
+            {
+                flag = 0;
+                continue;
+            }
+        if (flag)
+        {
+            printf("a[%d][%d]=%d\n", i, maxj, max);
+            break;
+        }
+    }
+    if (!flag)
+        printf("it is no exist\n");
+    return 0;
+}
 ~~~
 
-~~~C
+* 9
 
+~~~C
+#include <stdio.h>
+#define N 15
+int main()
+{
+    int i, number, top, mid, bott, loca, a[N], flag = 1, sign;
+    char c;
+    printf("enter data:\n");
+    scanf("%d", &a[0]);
+    i = 1;
+    while (i < N)
+    {
+        scanf("%d", &a[i]);
+        if (a[i] >= a[i - 1])
+            i++;
+        else
+            printf("enter this data again:\n");
+    }
+    printf("\n");
+    for (i = 0; i < N; i++)
+        printf("%5d", a[i]);
+    printf("\n");
+    while (flag)
+    {
+        printf("input number to look for:");
+        scanf("%d", &number);
+        sign = 0;
+        top = 0;
+        bott = N - 1;
+        if ((number < a[0]) || (number > a[N - 1]))
+            loca = -1;
+        while ((!sign) && (top <= bott))
+        {
+            mid = (bott + top) / 2;
+            if (number == a[mid])
+            {
+                loca = mid;
+                printf("Has found %d,its position is%d\n", number, loca + 1);
+                sign = 1;
+            }
+            else if (number < a[mid])
+                bott = mid - 1;
+            else
+                top = mid + 1;
+        }
+        if (!sign || loca == -1)
+            printf("cannot find %d \n", number);
+        printf("continue or not(Y/N)?");
+        scanf("%c", &c);
+        if (c == 'N' || c == 'n')
+            flag = 0;
+    }
+    return 0;
+}
 ~~~
 
-~~~C
+* 10
 
+~~~C
+//输入三行，分别统计大写字母，小写字母，空格，数字，其他字符
+#include <stdio.h>
+int main()
+{
+    char a[3][80];
+    int i, j, upper, low, number, spa, oth;
+    upper = low = number = spa = oth = 0;
+    for (i = 0; i < 3; i++)
+    {
+        printf("input line %d\n", i + 1);
+        gets(a[i]);
+        for (j = 0; j < 80 && a[i][j] != '\0'; j++)
+        {
+            if (a[i][j] >= 'A' && a[i][j] <= 'Z')
+                upper++;
+            if (a[i][j] >= 'a' && a[i][j] <= 'z')
+                low++;
+            if (a[i][j] >= '0' && a[i][j] <= '9')
+                number++;
+            if (a[i][j] == ' ')
+                spa++;
+            else
+                oth++;
+        }
+    }
+    printf("upper:%d\n", upper);
+    printf("lower:%d\n", low);
+    printf("number:%d\n", number);
+    printf("space:%d\n", spa);
+    printf("other:%d\n", oth);
+    return 0;
+}
 ~~~
 
-~~~C
+* 11
 
+~~~C
+/*
+打印如下图案
+ *****
+  *****
+   *****
+    *****
+*/
+#include <stdio.h>
+int main()
+{
+    char a[5] = {'*', '*', '*', '*', '*'}, space = ' ';
+    int i, j, k;
+    for (i = 1; i < 5; i++)
+    {
+        printf("\n");
+        for (j = 0; j < i; j++)
+            printf(" ");
+        for (k = 0; k < 5; k++)
+            printf("%c", a[k]);
+    }
+    return 0;
+}
 ~~~
 
-~~~C
+* 12
 
+~~~C
+#include <stdio.h>
+int main()
+{
+    int i, j;
+    char a[100];
+    printf("input code:\n");
+    gets(a);
+    for (i = 0; a[i] != '\0'; i++)
+    {
+        if ((a[i] >= 'A') && (a[i] <= 'Z'))
+            a[i] = 155 - a[i];
+        else if ((a[i] >= 'a') && (a[i] <= 'z'))
+            a[i] = 219 - a[i];
+        else
+            a[i] = a[i];
+    }
+    j = i;
+    printf("orginal text:\n");
+    for (i = 0; i < j; i++)
+        putchar(a[i]);
+    return 0;
+}
 ~~~
 
-~~~C
+* 13
 
+~~~C
+//把两个字符串连接起来
+#include <stdio.h>
+int main()
+{
+    char a[80], b[40];
+    int i = 0, j = 0;
+    printf("input a\n");
+    gets(a);
+    printf("input b\n");
+    gets(b);
+    while (a[i] != '\0')
+    {
+        i++;
+    }
+    while (b[j] != '\0')
+    {
+        a[i++] = b[j++];
+    }
+    a[i] = '\0';
+    printf("\nThe new string is:%s\n",a);
+    return 0;
+}
 ~~~
 
-~~~C
+* 14
 
+~~~C
+//比较字符串并输出不同字符ASCII码差值
+#include <stdio.h>
+int main()
+{
+    int i = 0;
+    char a[100], b[100];
+    printf("input a\n");
+    gets(a);
+    printf("input b\n");
+    gets(b);
+    for (i = 0; a[i] != '\0' && b[i] != '\0'; i++)
+    {
+        if (a[i] != b[i])
+        {
+            printf("%d", a[i] - b[i]);
+        }
+    }
+    if (a[i] == '\0' && b[i] == '\0')
+    {
+        printf("0");
+    }
+    return 0;
+}
 ~~~
 
-~~~C
-
-~~~
+* 15
 
 ~~~C
-
-~~~
-
-~~~C
-
+#include <stdio.h>
+#include <string.h>
+int main()
+{
+    char a[80],b[80];
+    int i;
+    printf("input b\n");
+    gets(b);
+    for(i=0;i<=strlen(b);i++)
+        a[i]=b[i];
+    printf("a:%s\n",a);
+    return 0;
+}
 ~~~
