--- a/第七章.md
+++ b/第七章.md
@@ -97,12 +97,90 @@ void smaller_than_zero(float a,float b)
 
 ~~~
 
-~~~C
+* 3
 
+~~~C
+#include <stdio.h>
+int main()
+{
+    int prime(int);
+    int n;
+    printf("input an integer:");
+    scanf("%d", &n);
+    if (prime(n))
+    {
+        printf("%d is a prime\n", n);
+    }
+    else
+    {
+        printf("%d is not a prime\n", n);
+    }
+    return 0;
+}
+int prime(int n)
+{
+    int flag = 1, i;
+    for (i = 2; i <= n / 2 && flag == 1; i++)
+    {
+        if (n % i == 0)
+            flag = 0;
+        return (flag);
+    }
+}
 ~~~
 
-~~~C
+* 4
 
+~~~C
+#include <stdio.h>
+#define N 3
+int array[N][N];
+int main()
+{
+    void convert(int array[ ][3]);
+    int i, j;
+    printf("input array:\n");
+    for ( i = 0; i < N; i++)
+    {
+        for (j = 0; j < N;j++)
+        {
+            scanf("%d",&array[i][j]);
+        }
+    }
+    printf("\noriginal array :\n");
+    for (i = 0; i < N; i++)
+    {
+        for (j = 0; j < N; j++)
+        {
+            printf("%5d", array[i][j]);
+        }
+        printf("\n");
+    }
+    convert(array);
+    printf("convert array:\n");
+    for (i = 0; i < N; i++)
+    {
+        for (j = 0; j < N; j++)
+        {
+            printf("%5d", array[i][j]);
+        }
+        printf("\n");
+    }
+    return 0;
+}
+void convert(int array[][3])
+{
+    int i, j,t;
+    for (i = 0; i < N; i++)
+    {
+        for (j = i+1; j < N; j++)
+        {
+            t = array[i][j];
+            array[i][j] = array[j][i];
+            array[j][i] = t;
+        }
+    }
+}
 ~~~
 
 ~~~C
