--- a/第七章.md
+++ b/第七章.md
@@ -183,16 +183,92 @@ void convert(int array[][3])
 }
 ~~~
 
-~~~C
+* 5
 
+~~~C
+#include <stdio.h>
+#include <string.h>
+int main(){
+    void inverse(char str[]);
+    char str[100];
+    printf("input string:");
+    scanf("%s",str);
+    inverse(str);
+    printf("inverse string:%s\n",str);
+    return 0;
+}
+void inverse(char str[])
+{
+    char t;
+    int i, j;
+    for (i = 0, j = strlen(str); i < (strlen(str) / 2);i++,j--)
+    {
+        t = str[i];
+        str[i] = str[j - 1];
+        str[j - 1] = t;
+    }
+}
 ~~~
 
-~~~C
+* 6
 
+~~~C
+#include <stdio.h>
+int main(){
+    void concatenate(char[], char[], char[]);
+    char s1[100], s2[100], s[100];
+    printf("input string1:");
+    scanf("%s",s1);
+    printf("input string2:");
+    scanf("%s", s2);
+    concatenate(s1, s2, s);
+    printf("\nThe new string is %s\n",s);
+    return 0;
+}
+
+void concatenate(char string1[], char string2[], char string[])
+{
+    int i, j;
+    for (i = 0; string1[i] != '\0'; i++)
+    {
+        string[i] = string1[i];
+    }
+    for (j = 0; string2[j] != '\0'; j++)
+    {
+        string[i+j] = string2[j];
+    }
+    string[i + j] = '\0';
+}
 ~~~
 
-~~~C
+* 7
 
+~~~C
+#include <stdio.h>
+int main(){
+    void cpy(char[], char[],char []);
+    char str[80], c[80];
+    char v[10] = {'a', 'A', 'e', 'E', 'i', 'I', 'o', 'O', 'u', 'U'};
+    printf("input string:");
+    gets(str);
+    cpy(str, c,v);
+    printf("The vowel letters are:%s\n", c);
+    return 0;
+}
+void cpy(char s[], char c[],char v[])
+{
+    int i, j,k;
+    for (i = 0, j = 0; s[i] != '\0';i++)
+    {
+        for (k = 0; k<=9;k++)
+            if (s[i] ==v[k])
+            {
+                c[j] = s[i];
+                j++;
+            }
+        c[j] = '\0';
+    }
+}
 ~~~
 
 ~~~C
