--- a/第七章.md
+++ b/第七章.md
@@ -271,16 +271,132 @@ void cpy(char s[], char c[],char v[])
 }
 ~~~
 
-~~~C
+* 8
 
+~~~C
+#include <stdio.h>
+#include <string.h>
+int main()
+{
+    void insert(char[ ]);
+    char str[80];
+    printf("input four digits:");
+    scanf("%s", str);
+    insert(str);
+    return 0;
+}
+
+void insert(char str[])
+{
+    int i;
+    for (i = strlen(str); i > 0; i--)
+    {
+        str[2 * i] = str[i];
+        str[2 * i - 1] = ' ';
+    }
+    printf("output:\n%s\n", str);
+}
 ~~~
 
-~~~C
+* 9
 
+~~~C
+#include <stdio.h>
+int letter, digit, space, others;
+int main(){
+    void count(char[]);
+    char text[80];
+    printf("input string:\n");
+    gets(text);
+    printf("string");
+    puts(text);
+    letter = 0;
+    digit = 0;
+    space = 0;
+    others = 0;
+    count(text);
+    printf("\nletter:%d\ndigit:%d\nspace:%d\nothers:%d\n",letter,digit,space,others);
+    return 0;
+}
+void count(char str[])
+{
+    int i;
+    for (i = 0; str[i] != '\0';i++)
+    {
+        if ((str[i]>='a'&&str[i]<='z')||(str[i]>='A'&&str[i]<='Z'))
+        {
+            letter++;
+        }
+        else if (str[i]>='0'&&str[i]<='9')
+        {
+            digit++;
+        }
+        else if (str[i]==32)
+        {
+            space++;
+        }
+        else
+        {
+            others++;
+        }
+    }
+}
 ~~~
 
-~~~C
+* 10
 
+~~~C
+#include <stdio.h>
+#include <string.h>
+int main(){
+    int alphabetic(char);
+    int longest(char[]);
+    int i;
+    char line[100];
+    printf("input one line:\n");
+    gets(line);
+    printf("The longest word is :");
+    for (i = longest(line); alphabetic(line[i]);i++)
+        printf("%c",line[i]);
+    printf("\n");
+    return 0;
+}
+int alphabetic(char c)
+{
+    if ((c>='a'&&c<='z')||(c>='A'&&c<='Z'))
+        return (1);
+    else
+        return (0);
+}
+
+int longest(char string[])
+{
+    int len = 0, length = 0, flag = 1, place = 0, point;
+    for (int i = 0; i <= strlen(string);i++)
+    {
+        if(alphabetic(string[i]))
+        {
+            if(flag)
+            {
+                point = i;
+                flag = 0;
+            }
+            else
+                len++;
+        }
+        else
+        {
+            flag = 1;
+            if(len>=length)
+            {
+                length = len;
+                place = point;
+                len = 0;
+            }
+        }
+    }
+    return (place);
+}
 ~~~
 
 ~~~C
