--- a/第七章.md
+++ b/第七章.md
@@ -399,6 +399,217 @@ int longest(char string[])
 }
 ~~~
 
+* 11
+
+~~~C
+#include <stdio.h>
+#include <string.h>
+#define N 10
+char str[N];
+int main()
+{
+    void sort(char[]);
+    int i, flag;
+    for (flag = 1; flag == 1;)
+    {
+        printf("input string:\n");
+        scanf("%s", &str);
+        if(strlen(str)>N)
+            printf("string too long,input again");
+        else
+            flag = 0;
+    }
+    sort(str);
+    printf("string sort:\n");
+    for (i = 0; i < N;i++)
+        printf("%c",str[i]);
+    printf("\n");
+    return 0;
+}
+void sort(char str[])
+{
+    int i, j;
+    char t;
+    for (j = 1; j < N;j++)
+    {
+        for (i = 0; (i < N - j) && (str[i] != '\0');i++)
+        {
+            if(str[i]>str[i+1])
+            {
+                t = str[i];
+                str[i] = str[i + 1];
+                str[i + 1] = t;
+            }
+        }
+    }
+}
+~~~
+
+* 12
+
+~~~C
+#include <stdio.h>
+#include <math.h>
+int main(){
+    float solut(float a, float b, float c, float d);
+    float a, b, c, d;
+    printf("input a,b,c,d:");
+    scanf("%f, %f, %f, %f ",&a,&b,&c,&d);
+    printf("x=%10.7f\n",solut(a,b,c,d));
+    return 0;
+}
+float solut(float a,float b,float c,float d)
+{
+    float x = 1, x0, f, f1;
+    do
+    {
+        x0 = x;
+        f = ((a * x0 + b) * x0 + c) * x0 + d;
+        f1 = (3 * a * x0 + 2 * b) * x0 + c;
+        x = x0 - f / f1;
+    } while (fabs(x-x0)>=1e-3);
+    return (x);
+}
+~~~
+
+* 13
+
+~~~C
+#include <stdio.h>
+int main()
+{
+    int x, n;
+    float p(int, int);
+    printf("input n,x:");
+    scanf("%d %d", &n, &x);
+    printf("n=%d,x=%d\n", n, x);
+    printf("P%d(%d)=%6.2f\n", n,x, p(n, x));
+    return 0;
+}
+float p(int n, int x)
+{
+    if (n == 0)
+        return (1);
+    else if (n == 1)
+        return (x);
+    else
+        return (2 * n - 1) * x * p(x, (n-1)) - (n - 1) * p(x, (n-2)) / n;
+}
+~~~
+
+* 14
+
+~~~C
+#include <stdio.h>
+#define N 10
+#define M 5
+float score[N][M];
+float a_stu[N], a_cour[M];
+int r, c;
+
+int main()
+{
+    int i, j;
+    float h;
+    float s_var(void);
+    float highest();
+    void input_stu();
+    void aver_stu(void);
+    void aver_cour(void);
+    input_stu();
+    aver_stu();
+    aver_cour();
+    printf("\n No.courl cour2 cour3 cour4 cour5 aver\n");
+    for (i = 0; i < N; i++)
+    {
+        printf("\n NO %2d", i + 1);
+        for (j = 0; j < M; j++)
+            printf("%8.2f", score[i][j]);
+        printf("%8.2f\n", a_stu[i]);
+    }
+    printf("\n average:");
+    for (j = 0; j < M; j++)
+        printf("%8.2f", a_cour[j]);
+    printf("\n");
+    h = highest();
+    printf("higest:%7.2f NO %2d course %2d\n", h, r, c);
+    printf("variance %8.2f\n", s_var());
+    return 0;
+}
+void input_stu()
+{
+    int i, j;
+    for (i = 0; i < N; i++)
+    {
+        printf("\n input score of student %2d:\n", i + 1);
+        for (j = 0; j < M; j++)
+            scanf("%f", &score[i][j]);
+    }
+}
+void aver_stu(void)
+{
+    int i, j;
+    float s;
+    for (i = 0; i < N; i++)
+    {
+        for (j = 0, s = 0; j < M; j++)
+            s += score[i][j];
+        a_stu[i] = s / 5.0;
+    }
+}
+void aver_cour(void)
+{
+    int i, j;
+    float s;
+    for (j = 0; j < M; j++)
+    {
+        s = 0;
+        for (i = 0; i < N; i++)
+            s += score[i][j];
+        a_cour[j] = s / (float)N;
+    }
+}
+float highest()
+{
+    float high;
+    int i, j;
+    high = score[0][0];
+    for (i = 0; i < N; i++)
+        for (j = 0; j < M; j++)
+        {
+            if (score[i][j] > high)
+            {
+                high = score[i][j];
+                r = i + 1;
+                c = j + 1;
+            }
+        }
+    return (high);
+}
+float s_var(void)
+{
+    int i;
+    float sumx, sumxn;
+    sumx = 0.0;
+    sumxn = 0.0;
+    for (i = 0; i < N; i++)
+    {
+        sumx += a_stu[i] * a_stu[i];
+        sumxn += a_stu[i];
+    }
+    return (sumx / N - (sumxn / N) * (sumxn / N));
+}
+
+~~~
+
+~~~C
+
+~~~
+
+~~~C
+
+~~~
+
 ~~~C
 
 ~~~
