--- a/第七章.md
+++ b/第七章.md
@@ -602,12 +602,147 @@ float s_var(void)
 
 ~~~
 
-~~~C
+* 15
 
+~~~C
+#include <stdio.h>
+#include <string.h>
+#define N 10
+int main(){
+    void input(int num[], char name[N][8]);
+    void sort(int num[], char name[N][8]);
+    void search(int n, int num[], char name[N][8]);
+    int num[N], number, flag = 1, c;
+    char name[N][8];
+    input(num, name);
+    sort(num, name);
+    while(flag==1)
+    {
+        printf("\n input number to look for:");
+        scanf("%d",&number);
+        search(number, num, name);
+        printf("continue or not(Y/N)?");
+        getchar();
+        c = getchar();
+        if(c=='N'||c=='n')
+            flag = 0;
+    }
+    return 0;
+}
+void input(int num[],char name[N][8])
+{
+    int i;
+    for (i = 0; i < N;i++)
+    {
+        printf("input NO.:");
+        scanf("%d",&num[i]);
+        printf("input name:");
+        getchar();
+        gets(name[i]);
+    }
+}
+void sort(int num[], char name[N][8])
+{
+    int i, j, min, temp1;
+    char temp2[8];
+    for (i = 0; i < N - 1;i++)
+    {
+        min = i;
+        for (j = i; j < N;j++)
+            if(num[min]>num[j])
+                min = j;
+        temp1 = num[i];
+        strcpy(temp2, name[i]);
+        num[i] = num[min];
+        strcpy(name[i], name[min]);
+        num[min] = temp1;
+        strcpy(name[min], temp2);
+    }
+    printf("\n result:\n");
+    for (i = 0; i < N;i++)
+        printf("\n %5d %10s",num[i],name[i]);
+}
+void search(int n,int num[], char name[N][8])
+{
+    int top, bott, mid, loca, sign;
+    top = 0;
+    bott = N - 1;
+    loca = 0;
+    sign = 1;
+    if((n<num[0])||(n>num[N-1]))
+        loca = -1;
+    while((sign==1)&&(top<=bott))
+    {
+        mid = (bott + top) / 2;
+        if(n==num[mid])
+        {
+            loca = mid;
+            printf("No.%d,his name is %s\n", n, name[loca]);
+            sign = -1;
+        }
+        else if(n<num[mid])
+            bott = mid - 1;
+        else
+            top = mid + 1;
+    }
+    if (sign == 1 || loca==-1)
+        printf("%d not been found \n",n);
+}
 ~~~
 
-~~~C
+* 16
 
+~~~C
+#include <stdio.h>
+#define MAX 1000
+int main(){
+    int htoi(char s[]);
+    int c, i, flag, flag1;
+    char t[MAX];
+    i = 0;
+    flag = 0;
+    flag1 = 1;
+    printf("input a HEX number:");
+    while((c=getchar())!='\0'&&i<MAX&&flag1)
+    {
+        if(c>='0'&&c<='9'||c>='a'&&c<='z'||c>='A'&&c<='Z')
+        {
+            flag = 1;
+            t[i++] = c;
+        }
+        else if (flag)
+        {
+            t[i] = '\0';
+            printf("decimal number%d\n",htoi(t));
+            printf("continue or not ?");
+            c = getchar();
+            if(c=='c'||c=='C')
+                flag1 = 0;
+            else
+            {
+                flag = 0;
+                i = 0;
+                printf("\n input a HEX number:");
+            }
+        }
+    }
+    return 0;
+}
+int htoi(char s[])
+{
+    int i, n;
+    n = 0;
+    for (i = 0; s[i] != '\0';i++)
+    {
+        if(s[i]>='0'&&s[i]<='9')
+            n = n * 16 + s[i] - '0';
+        if (s[i] >= 'a' && s[i] <= 'f')
+            n = n * 16 + s[i] - 'a' + 10;
+        if (s[i] >= 'A' && s[i] <= 'F')
+            n = n * 16 + s[i] - 'A' + 10;
+        }
+        return (n);
+}
 ~~~
 
 ~~~C
